--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,6 @@
 <resources>
-    <string name="app_name">Guia06App</string>
+    <string name="app_name">Guia07App</string>
+    <string name="facebook_app_id">1210616552638043</string>
+    <string name="fb_login_protocol_scheme">fb1210616552638043</string>
+
 </resources>
